--- a/package.json
+++ b/package.json
@@ -4,9 +4,11 @@
   "description": "Simple library to evaluate yaml files interpolating environment variables, validating and enforcing type safety.",
   "files": [
     "dist/*.js",
-    "dist/**/*.js",
     "dist/*.js.map",
-    "dist/**/*.js.map"
+    "dist/*.d.js",
+    "dist/**/*.js",
+    "dist/**/*.js.map",
+    "dist/**/*.d.ts"
   ],
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
