misc: adjusting dependabot auto-merge

--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -35,6 +35,8 @@ jobs:
         with:
           compat-lookup: true
           github-token: "${{ secrets.GITHUB_TOKEN }}"
+      - name: Echo compatibility score
+        run: echo ${{ steps.dependabot-metadata.outputs.compatibility-score }}
       - name: Enable auto-merge for Dependabot PRs
         if: ${{ steps.dependabot-metadata.outputs.compatibility-score >= 90 }}
         run: gh pr merge --auto --merge "$PR_URL"
