--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -39,7 +39,7 @@ jobs:
         run: echo ${{ steps.metadata.outputs.compatibility-score }}
       - name: Enable auto-merge for Dependabot PRs
         if: ${{ steps.metadata.outputs.compatibility-score >= 90 }}
-        run: gh pr merge --auto --merge "$PR_URL"
+        run: gh pr merge --auto --rebase "$PR_URL"
         env:
           PR_URL: ${{ github.event.pull_request.html_url }}
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
