--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -37,6 +37,8 @@ jobs:
           github-token: "${{ secrets.GITHUB_TOKEN }}"
       - name: Echo compatibility score
         run: echo ${{ steps.metadata.outputs.compatibility-score }}
+      - name: Approve a PR
+        run: gh pr review --approve "$PR_URL"
       - name: Enable auto-merge for Dependabot PRs
         if: ${{ steps.metadata.outputs.compatibility-score >= 90 }}
         run: gh pr merge --auto --rebase "$PR_URL"
