--- a/package.json
+++ b/package.json
@@ -36,12 +36,14 @@
     "test:ci": "jest --ci --coverage"
   },
   "dependencies": {
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "@types/jest": "29.5.12",
     "@types/js-yaml": "^4.0.5",
     "@types/node": "^22.0.0",
+    "@types/yamljs": "^0.2.34",
     "@typescript-eslint/eslint-plugin": "^7.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "eslint": "^8.43.0",
